--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,3 @@
 {
-  "version": 2,
-  "functions": {
-    "api/**/*.js": {
-      "runtime": "@vercel/node@20.x"
-    }
-  },
-  "env": {
-    "ADMIN_PASSWORD": "Whoamidev1819"
-  },
-  "rewrites": [
-    {
-      "source": "/admin",
-      "destination": "/public/admin.html"
-    }
-  ]
+  "version": 2
 }
