--- a/package.json
+++ b/package.json
@@ -1,17 +1,5 @@
 {
   "name": "whoami-key-system",
   "version": "1.0.0",
-  "description": "Key system for Delta Executor with 1 user 1 device restriction",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "vercel dev",
-    "build": "echo 'Build complete'"
-  },
-  "dependencies": {
-    "crypto": "^1.0.1"
-  },
-  "engines": {
-    "node": "20.x"
-  }
+  "type": "module"
 }
